environments/dev/apps/app-coolstore/services/coolstore/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: coolstore
    app.kubernetes.io/part-of: app-coolstore
  name: coolstore
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: coolstore
    app.kubernetes.io/part-of: app-coolstore
status:
  loadBalancer: {}
