environments/dev/apps/app-coolstore/services/coolstore/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: coolstore
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: coolstore
    weight: 100
  wildcardPolicy: None
